; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_twophase.c_RecordTransactionCommitPrepared.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_twophase.c_RecordTransactionCommitPrepared.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@replorigin_session_origin = common dso_local global i64 0, align 8
@InvalidRepOriginId = common dso_local global i64 0, align 8
@DoNotReplicateId = common dso_local global i64 0, align 8
@MyPgXact = common dso_local global %struct.TYPE_2__* null, align 8
@MyXactFlags = common dso_local global i32 0, align 4
@XACT_FLAGS_ACQUIREDACCESSEXCLUSIVELOCK = common dso_local global i32 0, align 4
@replorigin_session_origin_lsn = common dso_local global i32 0, align 4
@XactLastRecEnd = common dso_local global i32 0, align 4
@replorigin_session_origin_timestamp = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32*, i32, i32*, i32, i32*, i32, i8*)* @RecordTransactionCommitPrepared to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @RecordTransactionCommitPrepared(i32 %0, i32 %1, i32* %2, i32 %3, i32* %4, i32 %5, i32* %6, i32 %7, i8* %8) #0 {
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32*, align 8
  %17 = alloca i32, align 4
  %18 = alloca i8*, align 8
  %19 = alloca i32, align 4
  %20 = alloca i64, align 8
  %21 = alloca i32, align 4
  store i32 %0, i32* %10, align 4
  store i32 %1, i32* %11, align 4
  store i32* %2, i32** %12, align 8
  store i32 %3, i32* %13, align 4
  store i32* %4, i32** %14, align 8
  store i32 %5, i32* %15, align 4
  store i32* %6, i32** %16, align 8
  store i32 %7, i32* %17, align 4
  store i8* %8, i8** %18, align 8
  %22 = call i64 (...) @GetCurrentTimestamp()
  store i64 %22, i64* %20, align 8
  %23 = load i64, i64* @replorigin_session_origin, align 8
  %24 = load i64, i64* @InvalidRepOriginId, align 8
  %25 = icmp ne i64 %23, %24
  br i1 %25, label %26, label %30

26:                                               ; preds = %9
  %27 = load i64, i64* @replorigin_session_origin, align 8
  %28 = load i64, i64* @DoNotReplicateId, align 8
  %29 = icmp ne i64 %27, %28
  br label %30

30:                                               ; preds = %26, %9
  %31 = phi i1 [ false, %9 ], [ %29, %26 ]
  %32 = zext i1 %31 to i32
  store i32 %32, i32* %21, align 4
  %33 = call i32 (...) @START_CRIT_SECTION()
  %34 = load %struct.TYPE_2__*, %struct.TYPE_2__** @MyPgXact, align 8
  %35 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %34, i32 0, i32 0
  store i32 1, i32* %35, align 4
  %36 = load i64, i64* %20, align 8
  %37 = load i32, i32* %11, align 4
  %38 = load i32*, i32** %12, align 8
  %39 = load i32, i32* %13, align 4
  %40 = load i32*, i32** %14, align 8
  %41 = load i32, i32* %15, align 4
  %42 = load i32*, i32** %16, align 8
  %43 = load i32, i32* %17, align 4
  %44 = load i32, i32* @MyXactFlags, align 4
  %45 = load i32, i32* @XACT_FLAGS_ACQUIREDACCESSEXCLUSIVELOCK, align 4
  %46 = or i32 %44, %45
  %47 = load i32, i32* %10, align 4
  %48 = load i8*, i8** %18, align 8
  %49 = call i32 @XactLogCommitRecord(i64 %36, i32 %37, i32* %38, i32 %39, i32* %40, i32 %41, i32* %42, i32 %43, i32 0, i32 %46, i32 %47, i8* %48)
  store i32 %49, i32* %19, align 4
  %50 = load i32, i32* %21, align 4
  %51 = icmp ne i32 %50, 0
  br i1 %51, label %52, label %56

52:                                               ; preds = %30
  %53 = load i32, i32* @replorigin_session_origin_lsn, align 4
  %54 = load i32, i32* @XactLastRecEnd, align 4
  %55 = call i32 @replorigin_session_advance(i32 %53, i32 %54)
  br label %56

56:                                               ; preds = %52, %30
  %57 = load i32, i32* %21, align 4
  %58 = icmp ne i32 %57, 0
  br i1 %58, label %59, label %62

59:                                               ; preds = %56
  %60 = load i64, i64* @replorigin_session_origin_timestamp, align 8
  %61 = icmp eq i64 %60, 0
  br i1 %61, label %62, label %64

62:                                               ; preds = %59, %56
  %63 = load i64, i64* %20, align 8
  store i64 %63, i64* @replorigin_session_origin_timestamp, align 8
  br label %64

64:                                               ; preds = %62, %59
  %65 = load i32, i32* %10, align 4
  %66 = load i32, i32* %11, align 4
  %67 = load i32*, i32** %12, align 8
  %68 = load i64, i64* @replorigin_session_origin_timestamp, align 8
  %69 = load i64, i64* @replorigin_session_origin, align 8
  %70 = call i32 @TransactionTreeSetCommitTsData(i32 %65, i32 %66, i32* %67, i64 %68, i64 %69, i32 0)
  %71 = load i32, i32* %19, align 4
  %72 = call i32 @XLogFlush(i32 %71)
  %73 = load i32, i32* %10, align 4
  %74 = load i32, i32* %11, align 4
  %75 = load i32*, i32** %12, align 8
  %76 = call i32 @TransactionIdCommitTree(i32 %73, i32 %74, i32* %75)
  %77 = load %struct.TYPE_2__*, %struct.TYPE_2__** @MyPgXact, align 8
  %78 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %77, i32 0, i32 0
  store i32 0, i32* %78, align 4
  %79 = call i32 (...) @END_CRIT_SECTION()
  %80 = load i32, i32* %19, align 4
  %81 = call i32 @SyncRepWaitForLSN(i32 %80, i32 1)
  ret void
}

declare dso_local i64 @GetCurrentTimestamp(...) #1

declare dso_local i32 @START_CRIT_SECTION(...) #1

declare dso_local i32 @XactLogCommitRecord(i64, i32, i32*, i32, i32*, i32, i32*, i32, i32, i32, i32, i8*) #1

declare dso_local i32 @replorigin_session_advance(i32, i32) #1

declare dso_local i32 @TransactionTreeSetCommitTsData(i32, i32, i32*, i64, i64, i32) #1

declare dso_local i32 @XLogFlush(i32) #1

declare dso_local i32 @TransactionIdCommitTree(i32, i32, i32*) #1

declare dso_local i32 @END_CRIT_SECTION(...) #1

declare dso_local i32 @SyncRepWaitForLSN(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
